--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
-% Created 2025-04-05 Сб 01:12
+% Created 2025-05-19 Пн 02:51
 % Intended LaTeX compiler: pdflatex
-\documentclass[14pt,a4paper,oneside,openany]{book}
+\documentclass[14pt,a4paper,oneside,openany]{extbook}
 \usepackage[T2A]{fontenc}
 \include{config}
 \renewcommand{\contentsname}{Содержание}
@@ -34,16 +34,20 @@
 \MyTOC
 
 \chapter*{ТЕРМИНЫ И ОПРЕДЕЛЕНИЯ}
-\label{sec:orge3707f8}
+\label{sec:org0ef6861}
 \textbf{AutoML} -- автоматическое машинное обучение.
 
 \textbf{NLP} -- обработка естественного языка.
 
 \textbf{NLU} -- понимание естественного языка.
+
+\textbf{Эмбеддинг} -- .
+
+\textbf{Промпт} -- .
 \chapter*{Введение}
-\label{sec:org52c6dc1}
+\label{sec:org894c349}
 \addcontentsline{toc}{chapter}{Введение}
-В последние годы наблюдается бурный рост интереса к диалоговым системам на основе искусственного интеллекта (чат-ботам, голосовым помощникам и пр.). Так, по данным трендов, интерес к голосовым технологиям AI вырос почти втрое за пять лет\footnote{\url{https://www.verloop.io/blog/100-best-chatbot-statistics}}. Диалоговые системы внедряются в бизнес-процессы и повседневную жизнь, однако создание их интеллектуальной части – модели определения намерения пользователя (intent classification) – остается сложной задачей. Такой модуль является ключевым компонентом системы, позволяя автоматически выявлять цель запроса пользователя, но учет специфики различных доменов серьезно затрудняет разработку универсальной модели. Проектирование и тонкая настройка модели интентов требуют значительных экспертных усилий в области NLP и ML. Поэтому актуальной представляется автоматизация данного процесса – создание универсальных решений, способных уменьшить долю ручной работы и упростить разработку моделей классификации интентов. Автоматизированные подходы к машинному обучению (AutoML) обещают значительно сократить объем ручного труда за счет автоматического подбора оптимальных моделей и параметров, что особенно важно для быстро растущей области диалоговых систем.
+В последние годы наблюдается бурный рост интереса к диалоговым системам на основе искусственного интеллекта (чат-ботам, голосовым помощникам и так далее). Так, по данным трендов, интерес к голосовым технологиям AI вырос почти втрое за пять лет\footnote{\url{https://www.verloop.io/blog/100-best-chatbot-statistics}}. Диалоговые системы внедряются в бизнес-процессы и повседневную жизнь, однако создание их интеллектуальной части – модели определения намерения пользователя (intent classification) – остается сложной задачей. Такой модуль является ключевым компонентом системы, позволяя автоматически выявлять цель запроса пользователя, но учет специфики различных доменов серьезно затрудняет разработку универсальной модели. Проектирование и тонкая настройка модели интентов требуют значительных экспертных усилий в области NLP и ML. Поэтому актуальной представляется автоматизация данного процесса – создание универсальных решений, способных уменьшить долю ручной работы и упростить разработку моделей классификации интентов. Автоматизированные подходы к машинному обучению (AutoML) обещают значительно сократить объем ручного труда за счет автоматического подбора оптимальных моделей и параметров, что особенно важно для быстро растущей области диалоговых систем.
 
 На сегодняшний день для задачи классификации интентов накоплен внушительный арсенал методов. Традиционно применяются алгоритмы классического машинного обучения, такие как наивный tf-idf\autocite{joneskarensparck_statistical_1972}, а также подходы на основе k-ближайших соседей и ансамблевые методы (например, градиентный бустинг). С развитием глубокого обучения все более широко используются нейросетевые модели, таких как BERT\autocite{devlin_bert_2019}, которые достигают высоких показателей качества на задачах. Параллельно развиваются технологии AutoML, автоматизирующие выбор моделей и настройку гиперпараметров. Тем не менее, несмотря на прогресс отдельных компонентов, целостных универсальных AutoML-фреймворков, специально ориентированных на определение интентов пользователя, предложено немного. Существующие решения зачастую требуют участия эксперта для каждой новой предметной области, что указывает на необходимость разработать более обобщенный подход.
 
@@ -53,71 +57,169 @@
 
 Для достижения поставленной цели в работе решены следующие задачи:
 \begin{enumerate}
-\item разработка архитектуры и программной реализации AutoML-фреймворка для классификации интентов;
-\item экспериментальное испытание фреймворка на нескольких корпусах данных, относящихся к различным предметным областям;
-\item сравнение результатов, полученных с помощью AutoML-фреймворка, с качеством моделей, настроенных вручную, и анализ эффективности предлагаемого подхода.
+\item Провести обзор существующих фреймворков и библиотек, применяемых для построения моделей машинного обучения, включая решения для задач классификации пользовательских намерений;
+\item Выполнить анализ современных алгоритмов и подходов к задаче определения пользовательских намерений, включая традиционные методы машинного обучения и нейросетевые архитектуры;
+\item Разработать концепцию и архитектуру собственного фреймворка создания моделей машинного обучения для классификации пользовательских намерений;
+\item Реализовать программную часть фреймворка с возможностью автоматизированной настройки моделей и выбора признаков;
+\item Провести экспериментальное исследование эффективности фреймворка на нескольких датасетах из разных предметных областей;
+\item Сравнить результаты, полученные с использованием разработанного фреймворка, с качеством моделей, настроенных вручную, и провести анализ полученных результатов.
 \end{enumerate}
 
 \textbf{Практическая значимость} работы состоит в том, что созданный AutoML-фреймворк может быть непосредственно применен при разработке реальных диалоговых систем – чат-ботов, голосовых ассистентов, систем клиентской поддержки – и других NLP-приложений. Использование такого инструмента позволит ускорить внедрение новых сервисов и снизить порог вхождения для разработчиков за счет автоматизации подбора оптимальной модели под конкретный набор интентов.
 
 \textbf{Научная новизна} исследования определяется интеграцией современных методов автоматизированного машинного обучения в единой специализированной архитектуре, ориентированной на задачу классификации интентов. В предлагаемом решении объединяются передовые подходы, включая трансформерные модели и методы обучения с малым количеством примеров, в рамках одного AutoML-фреймворка. Такое сочетание технологий нацелено на достижение высокой точности и устойчивости модели при минимальном ручном вмешательстве, что ранее не было реализовано в полной мере для задачи определения интентов пользователя.
 \chapter{ОБЗОР ПРЕДМЕТНОЙ ОБЛАСТИ}
-\label{sec:org5cd0b2a}
+\label{sec:orge2e1362}
 \section{Определение намерений пользователя}
-\label{sec:org02b3e55}
+\label{sec:org075dadb}
 Классификация намерений –  это задача сопоставления высказывания пользователя с предопределенной меткой намерения (семантической категорией цели пользователя). Например, запрос “Какая погода будет завтра?” может быть классифицирован как запрос погоды. Эта способность является ключевым компонентом понимания естественного языка (NLU) в диалоговых системах, позволяя чат-ботам, виртуальным помощникам и другим агентам искусственного интеллекта понимать, чего хочет пользователь, и соответствующим образом реагировать. Классификация намерений уходит корнями в ранние разговорные диалоговые системы (например, телефонное обслуживание клиентов) и с тех пор получила повсеместное распространение в самых разных областях - от личных помощников и ботов поддержки клиентов до систем медицинских и юридических консультаций.
 
 Ранние методы были основаны на правилах, которые разрабатывались вручную, или на классическом машинном обучении с добавлением дополнительных функций. Однако с развитием области преобладать стали статистические методы, которые основываются на анализе данных. Сначала они использовали традиционные алгоритмы машинного обучения, а затем — методы глубокого обучения. Также мы наблюдаем расширение сферы применения: от простой классификации с закрытым набором параметров, когда каждый запрос должен относиться к одному из известных намерений, до более сложных сценариев. Например, к многоцелевой классификации, обнаружению намерений с открытым доменом или открытым набором параметров (когда запрос не соответствует ни одному из известных намерений), а также к распознаванию намерений с минимальным количеством попыток или вообще без них с помощью мощных генеративных моделей.
-\subsection{KNN}
-\label{sec:orgb3a1a91}
-\begin{enumerate}
-\item MLKNN
-\label{sec:orgcc851fd}
-Тут будет описание метода \autocite{zhang_mlknn_2007}
-\item DNNC
-\label{sec:org55d4e21}
-Тут будет описание метода \autocite{zhang_discriminative_2020}
-\item Hierarchical small navigable small worlds
-\label{sec:org543ff21}
-Тут будет описание метода \autocite{malkov_efficient_2018}
-\end{enumerate}
-\subsection{Классификация}
-\label{sec:org4694102}
-\begin{enumerate}
-\item Бустинг
-\label{sec:org3b7c0fa}
-Тут будет описание метода catboost \autocite{dorogush_catboost_2018,prokhorenkova_catboost_2018}
-\item Трансформеры
-\label{sec:orgdb31345}
-Тут будет описание метода \autocite{reimers_sentencebert_2019,devlin_bert_2019,vaswani_attention_2017}. Peft\autocite{han_parameterefficient_2024}, LoRa\autocite{hu_lora_2021}
-\end{enumerate}
 \section{Методы автоматического машинного обучения}
-\label{sec:org3e28c3d}
+\label{sec:orgb85849f}
 Автоматизированное машинное обучение (AutoML) относится к автоматизации полного процесса применения методов машинного обучения для решения реальных задач. Вместо того чтобы вручную выбирать алгоритмы, настраивать гиперпараметры, разрабатывать архитектуры моделей и создавать признаки, система AutoML автоматически принимает эти решения на основе данных. Мотивация для развития AutoML вытекает из бурного роста применения машинного обучения и стремления {}<<демократизировать>>{} машинное обучение – сделать современные техники доступными даже для неспециалистов. Модели машинного обучения зачастую чувствительны к множеству параметров (тип модели, архитектура, настройки гиперпараметров, предварительная обработка признаков и так далее), и нахождение оптимальной конфигурации часто требует кропотливого перебора даже для экспертов. Эта проблема особенно заметна в глубоком обучении, где выбор правильной архитектуры сети и стратегии обучения может определять конечное качество модели. Цель AutoML – автоматизировать принятие этих решений, позволяя пользователю просто предоставить данные, а система подбирает оптимальную модель. Данный обзор литературы предоставляет академический анализ AutoML с основным упором на его применение в обработке естественного языка (NLP), а также включает как фундаментальные работы, так и последние разработки. Мы рассмотрим историческую эволюцию и мотивации AutoML, ключевые технические компоненты, ведущие фреймворки и системы, особенности применения AutoML в задачах NLP (например, классификация текстов, маркировка последовательностей, языковое моделирование), сравнительный анализ производительности и существующие бенчмарки, а также новые тенденции и направления исследований (например, интеграция с фундаментальными моделями, обучение с малым количеством примеров, объяснимость моделей). Обзор ссылается на рецензируемые публикации и академические источники.
+\subsection{H2O}
+\label{sec:orga103bee}
+H2O\autocite{ledell_h2o_2020} -- является платформой машинного обучения с открытым исходным кодом, разработанной для автоматизации процесса контролируемого обучения. Она ориентирована на выполнение таких задач, как бинарная классификация, многоклассовая классификация и регрессия. Основная функция AutoML в H2O заключается в обучении широкого спектра алгоритмов, включая градиентные повышающие машины, случайные леса, глубокие нейронные сети и обобщенные линейные модели. Затем эти модели объединяются в ансамбль для получения наилучших предсказаний. Результатом работы AutoML является таблица лидеров — ранжированный список моделей по показателям производительности, из которого можно выбрать оптимальную модель для развертывания.
 
+Процесс автоматизации в H2O ограничен по времени, что позволяет пользователю задать максимальное время выполнения или количество моделей. Система обучает столько моделей, сколько возможно в рамках установленных ограничений. В отличие от более сложных методов оптимизации гиперпараметров (например, байесовской оптимизации), H2O использует случайный перебор моделей, полагаясь на разнообразие моделей и ансамблевую технику для достижения высокой производительности. Особенностью платформы является автоматическое создание двух сложенных ансамблей: один включает все обученные модели, другой — только лучшие модели каждого семейства алгоритмов. Этот подход позволяет повысить точность предсказаний без ручной настройки.
+
+H2O эффективно обрабатывает большие массивы данных за счет распределения вычислений по нескольким ядрам или узлам кластера. Платформа реализована на языке Java и предоставляет API для Python, R и других языков, что позволяет интегрировать её в различные среды. Результаты работы легко интерпретируемы: на выходе формируется ранжированный список моделей с указанием показателей производительности и времени обучения. Кроме того, встроенные инструменты объяснения моделей позволяют пользователям получать такие пояснения, как важность переменных, графики частичной зависимости и значения SHAP для лучших моделей. Таким образом, H2O обеспечивает возможность построения множества моделей за короткий промежуток времени, что особенно актуально при работе с большими объемами данных.
+\subsection{LightAutoML}
+\label{sec:org832f0bc}
+LightAutoML\autocite{vakhrushev_lightautoml_2022} (LAMA) — это облегчённый фреймворк AutoML с открытым исходным кодом, предназначенный для моделирования табличных данных. Основное назначение LAMA — автоматическая генерация конвейеров для структурированных данных с акцентом на скорость и эффективность использования вычислительных ресурсов. Он поддерживает задачи бинарной и многоклассовой классификации, а также регрессию. Изначально ориентированный на работу с табличными данными, LightAutoML расширил свои возможности и теперь поддерживает текстовые признаки.
+
+Фреймворк автоматически выполняет предварительную обработку данных, включая очистку и кодирование отсутствующих значений, вывод типов признаков и их отбор в рамках конвейера. Гиперпараметры моделей настраиваются автоматически. LightAutoML предоставляет готовые пресеты конвейеров (например, {}<<TabularAutoML>>{}), которые обеспечивают быстрое развертывание моделей с минимальным вмешательством пользователя. Также доступны гибкие настройки для создания собственных конвейеров с учетом специфики задачи.
+
+Отличительной чертой LightAutoML является параллельное обучение нескольких конвейеров, результаты которых объединяются с использованием ансамблевых методов. Это может быть простое усреднение или более сложное построение, при котором модели одного уровня используют предсказания предыдущего уровня в качестве входных данных. Также важной концепцией является разделение этапов чтения и предварительной обработки: компонент {}<<Reader>>{} проверяет исходный набор данных и определяет необходимые преобразования для различных типов признаков. Это гарантирует надежность и автоматизацию оценки модели.
+\subsection{AutoGluon}
+\label{sec:org7e37713}
+AutoGluon -- комплексный инструментарий AutoML с открытым исходным кодом, который поддерживает широкий спектр задач машинного обучения, включая прогнозирование табличных данных, компьютерное зрение, обработку естественного языка и прогнозирование временных рядов. Фреймворк предоставляет специализированные API для каждой задачи, например, TabularPredictor, TextPredictor, ImagePredictor и TimeSeriesPredictor, что упрощает использование в различных областях.
+
+AutoGluon поддерживает обучение различных моделей: от древовидных алгоритмов (LightGBM, XGBoost, CatBoost) до нейронных сетей (например, трансформеров для текста и сверточных сетей для изображений), а также простых моделей, таких как k-ближайших соседей и линейные модели. Пользователь может настроить гиперпараметры, выбрать конкретные модели для обучения и использовать предустановленные конфигурации. Таким образом, AutoGluon предоставляет гибкие возможности для настройки обучения с минимальным объемом кода.
+\subsection{FEDOT}
+\label{sec:org72f0b03}
+FEDOT\autocites{nikitin_automated_2022}[][]{polonskaia_multiobjective_2021}(Flexible Evolutionary Design of Optimal Trees) -- фреймворк AutoML с акцентом на оптимизацию конвейеров с помощью эволюционных алгоритмов. Разработанный лабораторией моделирования природных систем Университета ИТМО, он предназначен для автоматизации полного жизненного цикла машинного обучения: от предварительной обработки данных до построения и оптимизации моделей.
+
+Основная идея FEDOT -- создание составных конвейеров с помощью генетических алгоритмов. Конвейер представлен в виде направленного ациклического графа (DAG), узлы которого могут быть как преобразованиями данных, так и моделями. Эволюционный оптимизатор, известный как {}<<GOLEM>>{}, генерирует начальную популяцию случайных конвейеров и затем улучшает их с помощью мутаций и скрещивания. В результате создаются оптимальные конвейеры, адаптированные к конкретной задаче.
+
+FEDOT поддерживает работу с различными типами данных (табличные, текстовые, графовые) и обеспечивает гибкость настройки. Инструменты анализа позволяют исследовать чувствительность компонентов конвейера, а также оценивать влияние отдельных моделей на итоговую производительность. Фреймворк поддерживает экспорт оптимальных конвейеров в формате JSON и позволяет интеграцию в производственные среды.
+\subsection{Сравнение алгоритмов}
+\label{sec:org7ac2f21}
+Классификация намерений пользователя представляет собой важную задачу в области обработки естественного языка, требующую использования современных методов машинного обучения и автоматизированных инструментов для построения эффективных моделей. Для реализации данной задачи важно учитывать несколько ключевых критериев: способы обработки текста, поддержка работы с малым набором данных, поддержка выявления намерений вне области определения (Out-Of-Scope, OOS), гибкость настройки параметров, поддержка логирования и возможность использования промптов для энкодеров.
+
+Первым важным критерием является обработка текста, поскольку текстовые данные являются основным источником информации при классификации намерений. Современные модели, такие как трансформеры, демонстрируют высокую точность в задачах NLP благодаря обучению на больших объемах текстов. Поэтому наличие встроенной поддержки текстовых признаков, включая возможность применения эмбеддингов и трансформерных архитектур, является важным аспектом при создании фреймворка.
+
+Вторым значимым критерием является поддержка работы с малым набором данных. В прикладных задачах, связанных с классификацией намерений, часто возникает ситуация, когда количество размеченных данных ограничено. Это особенно актуально при адаптации моделей к новым доменам или редким языковым конструкциям. Поэтому важной характеристикой фреймворка является его способность эффективно работать с малыми наборами данных, например, за счет использования регуляризации или предварительно обученных эмбеддингов.
+
+Не менее важной является поддержка Out-Of-Scope (OOS) -- задачи, заключающейся в выявлении запросов пользователя, выходящих за рамки известных классов намерений. Выявление OOS-классов критично для обеспечения надежности и безопасности систем, поскольку позволяет корректно обрабатывать неизвестные или неподдерживаемые запросы. Фреймворки, реализующие данную функциональность, позволяют обучать модели, способные распознавать не только заданные классы, но и детектировать аномальные данные.
+
+Следующим важным аспектом является изменение параметров запуска. В зависимости от задачи, объема данных и доступных вычислительных ресурсов, может потребоваться гибкая настройка процесса обучения. Это особенно актуально при разработке моделей для различных доменов или на основе разнородных данных. Возможность адаптировать параметры позволяет оптимизировать модель как по точности, так и по времени выполнения.
+
+Поддержка логирования является важным компонентом автоматизации машинного обучения, поскольку позволяет отслеживать процесс обучения, хранить промежуточные результаты и проводить анализ моделей. В контексте классификации намерений важно иметь возможность анализировать ошибки и проверять гипотезы о моделях на каждом этапе обучения. Логирование помогает выявлять причины ухудшения качества моделей и отслеживать процессы настройки гиперпараметров, что критично для обеспечения повторяемости экспериментов и объяснимости конечных результатов.
+
+Последним критерием является поддержка промптов для энкодеров, что особенно важно при использовании моделей на основе трансформеров. В последнее появляются модели, которые поддерживают промпты в зависимости от задачи, которые улучшают качество ее работы. Например, модель e5\autocite{wang_multilingual_2024} использует \texttt{query:} и \texttt{passage:} для разных частей создания эмбеддинга для поиска.
+
+\begin{table}[h!]
+\caption{\label{tbl:automl_comparison}Сравнение AutoML фреймворков}
+\centering
+\begin{tabular}{|p{3cm}|p{3cm}|p{3cm}|p{3cm}|p{3cm}|}
+\hline
+Критерий & H2O & LightAutoML & AutoGluon & FEDOT\\
+\hline
+Способы обработки текста & Нет поддежки из коробки & TF-iDF\autocite{joneskarensparck_statistical_1972} и эмбеддинг & Эмбеддинг & TF-iDF, эмбеддинг\\
+\hline
+Поддержка работы с малым набором данных & Не оптимизирован для малых данных & Имеет режимы, позволяющие работать с небольшими наборами данных & Нет поддержки & Может адаптироваться к малым данным\\
+\hline
+Изменение параметров запуска & Гибкая настройка через API & Настройка через пресеты и конфигурацию, плохо документировано & Можно передавать свой конфиг, плохо документировано & Ограненная настройка\\
+\hline
+Поддержка логирования во внешние системы & Логирование результатов через интеграцию с H2O Flow & Нет поддержки & Нет поддержки & Нет поддержки\\
+\hline
+Поддержка промптов для энкодеров & Нет поддержки & Нет поддержки & Нет поддержки & Нет поддежки\\
+\hline
+Поддержка OOS (out of scope) & Нет встроенной поддержки & Нет встроенной поддержки & Нет поддержки & Нет поддержки\\
+\hline
+\end{tabular}
+\end{table}
+\section{Нейросетевые методы представления текста}
+\label{sec:org72a4eba}
+\subsection{BERT}
+\label{sec:org3d1efd4}
+Описание модели и её применения для задачи классификации текста. \autocite{reimers_sentencebert_2019,devlin_bert_2019,vaswani_attention_2017}
+\subsection{Sentence Transformers}
+\label{sec:org2e422e7}
+Применение и преимущества этой модели для задачи классификации.
+\section{Методы улучшения и адаптации моделей}
+\label{sec:org481cf2b}
+\subsection{P-Tuning}
+\label{sec:org4ceb574}
+Метод для улучшения производительности трансформеров с помощью эффективного использования параметров. \autocite{han_parameterefficient_2024}
+\subsection{LoRA}
+\label{sec:org9b7a550}
+Подход к адаптации трансформеров с использованием низкоресурсных параметров. \autocite{hu_lora_2021}
+\section{Классические методы классификации текста}
+\label{sec:orgc997735}
+\subsection{Logistic Regression}
+\label{sec:org4859f34}
+Обзор логистической регрессии в контексте классификации текста.
+\subsection{ML-KNN}
+\label{sec:org7147ac7}
+Описание метода и его применение в задачах многоклассовой классификации. \autocite{zhang_mlknn_2007}
+\subsection{DNNC}
+\label{sec:org17241e5}
+Описание метода DNNC для классификации, особенности работы и применения. \autocite{zhang_discriminative_2020}
+\subsection{CatBoost}
+\label{sec:orgd9cfad1}
+Преимущества использования CatBoost для задач классификации текста. \autocite{dorogush_catboost_2018,prokhorenkova_catboost_2018}
+\section{Методы поиска текста}
+\label{sec:orgca3f212}
 \begin{itemize}
-\item LAMA\autocite{vakhrushev_lightautoml_2022}
-\item AutoGluon\autocite{erickson_autogluontabular_2020}
-\item H2O\autocite{ledell_h2o_2020}
-\item TPOT
-\item TextBrew\autocite{desai_textbrew_2022}
+\item Faiss\autocite{douze_faiss_2025}
+\item \textbf{\textbf{Hierarchical Small Navigable Worlds (HSNW)}}
+Применение метода HSNW в контексте классификации текста. \autocite{malkov_efficient_2018}
+\end{itemize}
+\section{Используемые метрики}
+\label{sec:org2227366}
+\subsection{Метрики поиска}
+\label{sec:orgb0c5917}
+\begin{itemize}
+\item Pk
+\item NDCG
+\item MAP
+\item MRR
+\item marco
+\end{itemize}
+\subsection{Метрики классификации}
+\label{sec:org5e2b661}
+\begin{itemize}
+\item Presicion
+\item Recall
+\item Accuracy
+\item F1
+\item RocAuc
 \end{itemize}
 \section{Текстовые аугментации}
-\label{sec:org4640e02}
+\label{sec:org2e3130e}
+\autocite{li_generating_2024}
 \begin{itemize}
 \item Intent-augmentation \autocite{hu_exploring_2024}
 \item Few-shot detection \autocite{hou_fewshot_2021}
 \item Dspy \autocite{khattab_dspy_2023}
 \end{itemize}
 \chapter{ПРОЕКТИРОВАНИЕ}
-\label{sec:org91635ce}
+\label{sec:org1b8040a}
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.6\textwidth,height=0.5\textheight]{img/mermaid/framework_schema.png}
 \caption{\label{fig:framework_schema}Схема фреймворка}
 \end{figure}
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mermaid/optimization_schema.png}
+\label{}
+\end{center}
 \chapter*{Заключение}
-\label{sec:org1459497}
+\label{sec:org43361a5}
 \printbibliography[title=СПИСОК\spaceИСПОЛЬЗОВАНЫХ\spaceИСТОЧНИКОВ]
 \end{document}
