--- a/config.tex
+++ b/config.tex
@@ -2,13 +2,13 @@
 \usepackage[a4paper,top=20mm,bottom=20mm,left=30mm,right=15mm]{geometry}
 % Межстрочный интервал 1.5 (14 пт рекомендуемый размер шрифта, можно задавать через документ или в настройках Overleaf)
 \usepackage{setspace}
+% \usepackage{mathptmx}
 \onehalfspacing
 
 % русские буквы
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 \usepackage[main=russian,english]{babel}
-
 \newcommand{\MyTOC}{%
   \chapter*{СОДЕРЖАНИЕ}%
   \markboth{СОДЕРЖАНИЕ}{}%
@@ -60,83 +60,16 @@
 % Подключаем нужные пакеты для таблиц и оформления
 \usepackage{booktabs}   % Для красивых горизонтальных линий (\toprule, \midrule, \bottomrule)
 \usepackage{multirow}   % Для объединения ячеек по вертикали
+\usepackage{float}
 \usepackage{caption}    % Для \ContinuedFloat (продолжение таблицы)
-
-% ------------------------
-% Шаблон: Многоуровневый заголовок
-% ------------------------
-\newcommand{\ExampleMultiLevelTable}{%
-\begin{table}[h!]
-\caption{Таблица 1 --- Пример построения таблицы}
-\centering
-\begin{tabular}{|c|c|c|c|}
-\hline
-\multirow{2}{*}{\textbf{Заголовок}} & \multicolumn{2}{c|}{\textbf{Заголовок колонки}} & \multirow{2}{*}{\textbf{Заголовок колонки}}\\
-\cline{2-3}
-& \textbf{Подзаголовок} & \textbf{Подзаголовок} & \\
-\hline
-A & B & C & D \\
-\hline
-\end{tabular}
-\end{table}
-}
-
-% Шаблон: "Разбитая" таблица (две части под одним номером)
-\newcommand{\ExampleSplitTable}{%
-  % --- Первая часть ---
-  \begin{table}[h!]
-    \LeftCaption
-    \caption{Таблица 5.1 --- Пример переноса таблицы} \\
-    \centering
-    \begin{tabular}{|c|c|c|c|}
-    \hline
-    \textbf{Заголовок} & \textbf{Заголовок колонки} & \textbf{Заголовок колонки} & \textbf{Заголовок колонки} \\
-    \hline
-    1 & 2 & 3 & 4 \\
-    \hline
-    2 & 3 & 4 & 5 \\
-    \hline
-    \end{tabular}
-  \end{table}
-
-  % --- Продолжение ---
-  \begin{table}[h!]
-    \ContinuedFloat
-    \RightCaption
-    \caption*{Продолжение таблицы 5.1} \\
-    \centering
-    \begin{tabular}{|c|c|c|c|}
-    \hline
-    \textbf{Заголовок} & \textbf{Заголовок колонки} & \textbf{Заголовок колонки} & \textbf{Заголовок колонки} \\
-    \hline
-    3 & 4 & 5 & 6 \\
-    \hline
-    4 & 5 & 6 & 7 \\
-    \hline
-    \end{tabular}
-  \end{table}
-}
-
-\usepackage{caption}
 \usepackage{longtable}
 \usepackage{etoolbox}
 
+\DeclareCaptionLabelSeparator{emdash}{\space---\space}  % пробел, длинное тире, пробел
+
+\captionsetup[table]{position=t, singlelinecheck=false, justification=raggedright, labelsep=emdash, name=Таблица}
+\captionsetup[figure]{position=b, singlelinecheck=false, labelsep=emdash, justification=centering, name=Рисунок}
 % Настройка выравнивания заголовков
-\captionsetup[table]{justification=raggedright, singlelinecheck=false}
-
-%%%%%%%%%
-% \input{configs/config-images.tex}
-% Подключаем нужные пакеты для таблиц и оформления
-\usepackage{booktabs}   % Для красивых горизонтальных линий (\toprule, \midrule, \bottomrule)
-\usepackage{multirow}   % Для объединения ячеек по вертикали
-\usepackage{caption}    % Для \ContinuedFloat (продолжение таблицы)
-
-\usepackage{caption}
-\usepackage{longtable}
-\usepackage{etoolbox}
-
-% Настройка выравнивания заголовков
-\captionsetup[table]{justification=raggedright, singlelinecheck=false}
 
 % Переключатель для смены выравнивания заголовков
 \newcommand*\RightCaption{\captionsetup{justification=raggedleft}}
@@ -145,11 +78,4 @@ A & B & C & D \\
 
 % Дополнительные пакеты
 \usepackage[backend=biber,style=gost-numeric,sorting=none]{biblatex}
-% \addbibresource{bibliography.bib}
 \usepackage{booktabs}
-
-\usepackage{caption}
-\captionsetup[figure]{labelformat=empty}
-\captionsetup[table]{labelformat=empty}
-
-
